After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754781 - wrong MTU on VPN connections
wrong MTU on VPN connections
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: VPN (general)
1.0.x
Other Linux
: Normal normal
: ---
Assigned To: Lubomir Rintel
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-09-09 13:21 UTC by Scott
Modified: 2015-09-30 10:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
vpn mtu patch (761 bytes, patch)
2015-09-09 13:21 UTC, Scott
none Details | Review
[PATCH] vpn-connection: set the MTU for the VPN IP interface (2.01 KB, text/plain)
2015-09-28 19:02 UTC, Lubomir Rintel
  Details

Description Scott 2015-09-09 13:21:17 UTC
Created attachment 310978 [details] [review]
vpn mtu patch

On versions of network manager >1.0.2 connecting to a vpn (using openconnect in my case) results in an incorrect MTU being set for the vpn tunnel. I was able to bisect back to this commit as the source http://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=9b79e6c732ffb2fb105647c1465070d36a6cc180

I am attaching a patch, though it is simply a reversion patch that may need some love, that resolves the issue that I am experiencing (tested applied to 1.0.6).
Comment 1 Thomas Haller 2015-09-22 12:54:12 UTC
[FTR] there is downstream bug https://bugs.launchpad.net/network-manager/+bug/1498474 ...
Comment 2 Lubomir Rintel 2015-09-28 19:02:29 UTC
Created attachment 312320 [details]
[PATCH] vpn-connection: set the MTU for the VPN IP interface
Comment 3 Lubomir Rintel 2015-09-28 19:03:46 UTC
Thanks for the report. Here's the patch I'd like to apply to address the issue.
Comment 4 Thomas Haller 2015-09-29 16:09:47 UTC
LGTM.

Note that the patch applies on nm-1-0 branch. Could you first apply it on master, and then cherry-pick it...?
Comment 5 Lubomir Rintel 2015-09-29 16:42:11 UTC
nm-1-0: 105e30e vpn-connection: set the MTU for the VPN IP interface
master: e0fa48f vpn-connection: set the MTU for the VPN IP interface